--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.9.3",
+    "@types/node": "^18.19.65",
     "@types/pg": "^8.11.10",
-    "ts-node": "10.7.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "4.5.2"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
