--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typeorm": "^0.3.11"
   },
   "scripts": {
-    "build": "tsc",
+    "public": "tsc",
     "dev:server": "ts-node-dev src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   }
