--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,15 @@
 {
   "version": 2,
-  "public": [
+  "builds": [
     {
-      "src": "src/server.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "src/public/**/*",
+      "src": "public/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/src/public/$1"
+      "dest": "/public/$1"
     }
   ]
 }
