--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Awesome node developed with TypeORM.",
   "type": "commonjs",
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
@@ -27,6 +30,7 @@
     "typeorm": "^0.3.11"
   },
   "scripts": {
+    "start": "node src/server.ts",
     "public": "tsc",
     "dev:server": "ts-node-dev src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
