--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "typeorm": "^0.3.11"
   },
   "scripts": {
-    "start": "node src/server.ts",
-    "public": "tsc",
+    "start": "node dist/server.js",
     "dev:server": "ts-node-dev src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "build": "tsc",
+    "vercel-build": "tsc"
   }
 }
