--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["ESNext"],
     "allowJs": true,
-    "outDir": "dist",
+    "outDir": "public",
     "rootDir": "src",
     "strict": true,
     "noImplicitAny": true,
@@ -15,7 +15,5 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  }
 }
