--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "commonjs",
     "lib": ["ESNext"],
     "allowJs": true,
-    "outDir": "public",
-    "rootDir": "src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
     "strictPropertyInitialization": false,
